--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -12,8 +12,8 @@
   class="wave-background-top">
 </app-svg-generator>
 
-<app-login *ngIf="authType === 'login'"> </app-login>
-<app-register *ngIf="authType === 'register'"> </app-register>
+<app-login *ngIf="actionType === 'login'"> </app-login>
+<app-register *ngIf="actionType === 'register'"> </app-register>
 
 <app-svg-generator
   [waveHeight]=this.waveHeight
