--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -1,76 +1,93 @@
 :host {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+:host .form-card {
   width: 100%;
   height: 100%;
-  display: flex;
-  overflow-y: hidden;
-  overflow-x: hidden;
+  overflow: hidden;
+  max-height: 600px;
+  max-width: 500px;
   position: relative;
 }
+:host .form-card .data-form {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 10px 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+:host .form-card .data-form.visible:not(.disabled-animation) {
+  animation: right-to-center 0.5s ease-out forwards;
+}
+:host .form-card .data-form.visible.disabled-animation {
+  animation: none;
+  transform: translateX(0);
+}
+:host .form-card .data-form.hidden:not(.disabled-animation) {
+  animation: center-to-left 0.5s ease-out forwards;
+}
+:host .form-card .data-form.hidden.disabled-animation {
+  animation: none;
+  transform: translateX(-100%);
+}
 :host .wave-background-bottom {
-  position: absolute !important;
+  position: fixed !important;
   transform: rotateZ(-20deg);
+  height: 25%;
+  width: 120%;
   z-index: -1;
   bottom: -20%;
   right: -25%;
 }
 :host .wave-background-top {
-  position: absolute !important;
+  position: fixed !important;
   transform: rotateZ(-20deg);
+  height: 25%;
+  width: 120%;
   z-index: -1;
   top: -20%;
   left: -25%;
 }
 
-.auth-forms {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  animation: slide-left 0.5s ease-out forwards;
-}
-.auth-forms .title {
-  padding-top: 25px;
+.title {
   margin-top: 0;
   flex-shrink: 0;
   font-weight: 600;
   color: var(--yellow);
 }
-.auth-forms .welcome {
+
+.welcome {
   flex-shrink: 0;
   color: var(--white);
   text-align: center;
-  padding: 0 25px;
 }
-.auth-forms .welcome h2 {
+.welcome h2 {
   font-weight: 500;
 }
-.auth-forms .welcome span {
+.welcome span {
   font-weight: 200;
   font-size: 0.8em;
 }
-.auth-forms .form-container {
+
+.form-container {
   flex-shrink: 1;
   align-items: center;
   min-height: 0;
   width: 100%;
   position: relative;
+  mask-image: linear-gradient(to bottom, transparent, black 20px, black calc(100% - 20px), transparent);
 }
-.auth-forms .form-container:after {
-  content: "";
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  top: 0;
-  right: 0;
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0)), linear-gradient(rgb(0, 0, 0), rgba(0, 0, 0, 0));
-  background-position: bottom, top;
-  background-size: 100% 20px;
-  background-repeat: no-repeat;
-  pointer-events: none;
-}
-.auth-forms .form-container form {
+.form-container form {
   padding: 20px 0;
   display: flex;
   flex-direction: column;
@@ -82,34 +99,59 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
-.auth-forms .form-container form::-webkit-scrollbar {
+.form-container form::-webkit-scrollbar {
   display: none;
 }
-.auth-forms .form-container form div {
+.form-container form div {
   display: inline-flex;
   flex-direction: column;
   overflow: visible;
-  padding: 0 25px;
 }
 
 .text-link {
   flex-shrink: 0;
   justify-content: center;
 }
-.text-link.privacy-terms {
-  padding: 0 25px;
-}
 .text-link.to-register, .text-link.to-login {
   margin-bottom: 0;
-  padding: 0 25px 25px 25px;
 }
 
-@keyframes slide-left {
+@keyframes right-to-center {
   from {
-    transform: translateX(-100vw);
+    transform: translateX(100%);
   }
   to {
     transform: translateX(0);
+  }
+}
+@keyframes center-to-left {
+  from {
+    transform: translateX(0);
+  }
+  to {
+    transform: translateX(-100%);
+  }
+}
+@media only screen and (min-width: 600px) {
+  .form-card {
+    mask-image: linear-gradient(to right, transparent, black 40px, black calc(100% - 40px), transparent);
+  }
+  .form-card .data-form {
+    padding: 35px 65px !important;
+  }
+  :host .wave-background-top {
+    transform: rotateZ(0) translateX(-10%) translateY(-50%);
+    top: 0;
+    left: 0;
+    height: 60%;
+    width: 120%;
+  }
+  :host .wave-background-bottom {
+    transform: rotateZ(0) translateX(-10%) translateY(50%);
+    bottom: 0;
+    left: 0;
+    height: 60%;
+    width: 120%;
   }
 }
 
