--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -1,7 +1,5 @@
 <app-svg-generator
   [waveHeight]=this.waveHeight
-  [width]=this.width
-  [height]=this.height
   [count]=this.count
   [thickness]=this.thickness
   [blur]=this.blur
@@ -12,13 +10,13 @@
   class="wave-background-top">
 </app-svg-generator>
 
-<app-login *ngIf="actionType === 'login'"> </app-login>
-<app-register *ngIf="actionType === 'register'"> </app-register>
+  <div #formCard class="form-card">
+    <app-login class="data-form disabled-animation" [ngClass]="actionType === 'login' ? 'visible' : 'hidden'" id="login"> </app-login>
+    <app-register class="data-form disabled-animation" [ngClass]="actionType === 'register' ? 'visible' : 'hidden'" id="register"> </app-register>
+  </div>
 
 <app-svg-generator
   [waveHeight]=this.waveHeight
-  [width]=this.width
-  [height]=this.height
   [count]=this.count
   [thickness]=this.thickness
   [blur]=this.blur
