--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,7 @@
   --darker-blue: #0f0f13;
   --blue: #2805FF;
   --yellow: #FE9800;
+  --yellow-glow: rgba(254, 152, 0, 0.24);
   --white: #FEFFDA;
   --white-weak: rgba(254, 255, 218, 0.5);
   --black: #000000;
@@ -39,17 +40,16 @@ html {
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  scroll-behavior: smooth;
+  scroll-behavior: auto;
   /*pointer-events: auto !important;*/
 }
 
 body {
-  display: inline-block;
+  display: block;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
   background-color: #000000;
 }
 
