- correção do brilho quando o input estava com foco que estava sendo cortado

--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -107,6 +107,9 @@
   flex-direction: column;
   overflow: visible;
 }
+.form-container form div input {
+  overflow: visible !important;
+}
 
 .text-link {
   flex-shrink: 0;
