--- a/src/app/user-data/user-data.component.scss
+++ b/src/app/user-data/user-data.component.scss
@@ -124,6 +124,9 @@
       display: none;
     }
     div {
+      input {
+        overflow: visible !important;
+      }
       display: inline-flex;
       flex-direction: column;
       overflow: visible;
