- correção da correção

--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -103,12 +103,10 @@
   display: none;
 }
 .form-container form div {
+  padding: 0 5px;
   display: inline-flex;
   flex-direction: column;
   overflow: visible;
-}
-.form-container form div input {
-  overflow: visible !important;
 }
 
 .text-link {
