--- a/src/app/user-data/user-data.component.scss
+++ b/src/app/user-data/user-data.component.scss
@@ -124,9 +124,7 @@
       display: none;
     }
     div {
-      input {
-        overflow: visible !important;
-      }
+      padding: 0 5px;
       display: inline-flex;
       flex-direction: column;
       overflow: visible;
