--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -3,40 +3,28 @@
   height: 100vh;
   overflow: hidden;
   display: flex;
-  justify-content: center;
   align-items: center;
-}
-:host .form-card {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  max-height: 600px;
-  max-width: 500px;
+  justify-content: center;
   position: relative;
 }
-:host .form-card .data-form {
+:host .data-form {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 10px 25px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
 }
-:host .form-card .data-form.visible:not(.disabled-animation) {
+:host .data-form.visible:not(.disabled-animation) {
   animation: right-to-center 0.5s ease-out forwards;
 }
-:host .form-card .data-form.visible.disabled-animation {
+:host .data-form.visible.disabled-animation {
   animation: none;
   transform: translateX(0);
 }
-:host .form-card .data-form.hidden:not(.disabled-animation) {
+:host .data-form.hidden:not(.disabled-animation) {
   animation: center-to-left 0.5s ease-out forwards;
 }
-:host .form-card .data-form.hidden.disabled-animation {
+:host .data-form.hidden.disabled-animation {
   animation: none;
   transform: translateX(-100%);
 }
@@ -57,6 +45,18 @@
   z-index: -1;
   top: -20%;
   left: -25%;
+}
+
+.form-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  width: 100%;
+  height: 100%;
+  max-width: 450px;
+  max-height: 600px;
 }
 
 .title {
@@ -134,12 +134,6 @@
   }
 }
 @media only screen and (min-width: 600px) {
-  .form-card {
-    mask-image: linear-gradient(to right, transparent, black 40px, black calc(100% - 40px), transparent);
-  }
-  .form-card .data-form {
-    padding: 35px 65px !important;
-  }
   :host .wave-background-top {
     transform: rotateZ(0) translateX(-10%) translateY(-50%);
     top: 0;
