--- a/src/app/user-data/user-data.component.scss
+++ b/src/app/user-data/user-data.component.scss
@@ -35,22 +35,27 @@
     left: 0;
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &.visible:not(.disabled-animation) {
-      animation: right-to-center 0.5s ease-out forwards;
+      animation: right-to-center 0.5s ease-in-out forwards;
     }
     &.visible.disabled-animation {
-      animation: none;
+      animation: none !important;
       transform: translateX(0);
     }
     &.hidden:not(.disabled-animation) {
-      animation: center-to-left 0.5s ease-out forwards;
+      animation: center-to-left 0.5s ease-in-out forwards;
     }
     &.hidden.disabled-animation {
-      animation: none;
+      animation: none !important;;
       transform: translateX(-100%);
     }
+
   }
+
 
   .wave-background-bottom {
     @include wave-background-absolute('bottom');
@@ -66,18 +71,36 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 40px 25px;
   width: 100%;
   height: 100%;
-  max-width: 450px;
-  max-height: 600px;
+
+  &.compact {
+    padding-bottom: 35vh !important;
+  }
 }
 
 .title {
   margin-top: 0;
   flex-shrink: 0;
+  width: 100%;
   font-weight: 600;
   color: var(--yellow);
+  text-align: center;
+  position: relative;
+  padding: 0 10px;
+
+  .return-button {
+    text-decoration: none;
+    color: var(--yellow);
+    width: 20px;
+    font-size: 0.7em;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: text-shadow 0.5s ease-out;
+  }
 }
 
 .welcome {
@@ -164,6 +187,16 @@
 // responsiveness
 
 @media only screen and (min-width: 600px) {
+
+  .form-card {
+    max-width: 450px;
+    max-height: 600px;
+
+    &.compact {
+      padding-bottom: 40px !important;
+    }
+  }
+
   :host {
     .wave-background-top {
       transform: rotateZ(0) translateX(-10%) translateY(-50%);
@@ -179,5 +212,20 @@
       height: 60%;
       width: 120%;
     }
+  }
+}
+@media only screen and (max-height: 500px) {
+  .welcome {
+    span {
+      display: none;
+    }
+  }
+  .form-card.compact {
+    padding-bottom: 40px !important;
+  }
+}
+@media only screen and (max-height: 350px) {
+  .welcome {
+    display: none;
   }
 }
