--- a/src/app/user-data/login/login.component.html
+++ b/src/app/user-data/login/login.component.html
@@ -4,8 +4,8 @@
   <div class="welcome">
     <h2> Bem vindo </h2>
     <span>
-    prossiga com o login para utilizar nosso aplicativo
-  </span>
+      Prossiga com o login para utilizar nosso aplicativo
+    </span>
   </div>
 
   <div class="form-container">
@@ -18,7 +18,7 @@
         <label for="senha">Senha</label>
         <input class="input-contrast" type="password" pInputText id="senha" />
         <p class="text-link">
-          <span> Esqueceu sua senha?&nbsp;<a href="auth/password-recovery" title="ir para recuperação de senha">Clique aqui </a> </span>
+          <span> Esqueceu sua senha?&nbsp;<a class="hyperlink" [routerLink]="['/auth', 'recovery']" title="ir para recuperação de senha">Clique aqui </a> </span>
         </p>
       </div>
     </form>
@@ -26,6 +26,6 @@
 
   <app-button id="b-login">Entrar</app-button>
   <p class="text-link to-register">
-    <span> Ainda não possui uma conta?&nbsp;<a [routerLink]="['/auth', 'register']" title="ir para cadastro">Cadastre-se </a> </span>
+    <span> Ainda não possui uma conta?&nbsp;<a class="hyperlink" [routerLink]="['/auth', 'register']" title="ir para cadastro">Cadastre-se </a> </span>
   </p>
 </div>
