--- a/src/app/user-data/register/register.component.html
+++ b/src/app/user-data/register/register.component.html
@@ -29,14 +29,14 @@
   <p class="text-link text-center privacy-terms">
     <span>
       Ao continuar, você concorda com nossos
-      <a href="terms-of-use" title="termos de uso">Termos de Uso </a>
+      <a class="hyperlink" href="terms-of-use" title="termos de uso">Termos de Uso </a>
       e
-      <a href="privacy-policy" title="politicas de privacidade">Politicas de Privacidade </a>
+      <a class="hyperlink" href="privacy-policy" title="politicas de privacidade">Politicas de Privacidade </a>
     </span>
   </p>
 
   <app-button id="b-register" class="app-button">Cadastrar-se</app-button>
   <p class="text-link to-login text-center">
-    <span> Já possui uma conta?&nbsp;<a [routerLink]="['/auth', 'login']" title="ir para login">Entre na sua conta </a> </span>
+    <span> Já possui uma conta?&nbsp;<a class="hyperlink" [routerLink]="['/auth', 'login']" title="ir para login">Entre na sua conta </a> </span>
   </p>
 </div>
