--- a/src/app/user-data/user-data.component.css
+++ b/src/app/user-data/user-data.component.css
@@ -13,19 +13,22 @@
   left: 0;
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 :host .data-form.visible:not(.disabled-animation) {
-  animation: right-to-center 0.5s ease-out forwards;
+  animation: right-to-center 0.5s ease-in-out forwards;
 }
 :host .data-form.visible.disabled-animation {
-  animation: none;
+  animation: none !important;
   transform: translateX(0);
 }
 :host .data-form.hidden:not(.disabled-animation) {
-  animation: center-to-left 0.5s ease-out forwards;
+  animation: center-to-left 0.5s ease-in-out forwards;
 }
 :host .data-form.hidden.disabled-animation {
-  animation: none;
+  animation: none !important;
   transform: translateX(-100%);
 }
 :host .wave-background-bottom {
@@ -52,18 +55,34 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 20px;
+  padding: 40px 25px;
   width: 100%;
   height: 100%;
-  max-width: 450px;
-  max-height: 600px;
+}
+.form-card.compact {
+  padding-bottom: 35vh !important;
 }
 
 .title {
   margin-top: 0;
   flex-shrink: 0;
+  width: 100%;
   font-weight: 600;
   color: var(--yellow);
+  text-align: center;
+  position: relative;
+  padding: 0 10px;
+}
+.title .return-button {
+  text-decoration: none;
+  color: var(--yellow);
+  width: 20px;
+  font-size: 0.7em;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: text-shadow 0.5s ease-out;
 }
 
 .welcome {
@@ -134,6 +153,13 @@
   }
 }
 @media only screen and (min-width: 600px) {
+  .form-card {
+    max-width: 450px;
+    max-height: 600px;
+  }
+  .form-card.compact {
+    padding-bottom: 40px !important;
+  }
   :host .wave-background-top {
     transform: rotateZ(0) translateX(-10%) translateY(-50%);
     top: 0;
@@ -147,6 +173,19 @@
     left: 0;
     height: 60%;
     width: 120%;
+  }
+}
+@media only screen and (max-height: 500px) {
+  .welcome span {
+    display: none;
+  }
+  .form-card.compact {
+    padding-bottom: 40px !important;
+  }
+}
+@media only screen and (max-height: 350px) {
+  .welcome {
+    display: none;
   }
 }
 
